annoying html overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,17 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
+ html {
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+  }
+
 @media (min-width: 768px) {
  /* body { */
   /* max-width: 1400px;
